관제 이벤트,개소 클릭 팝업 분기 및 선택 취소 처리

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -88,10 +88,10 @@
                 </dl>
             </div>
         </div>
-    </section>-->
+    </section>
 
-    <!-- 시설물 정보 -->
-    <section class="area_right">
+    <!- 시설물 정보 -->
+    <section class="area_right" data-value="station" style="display: none;">
         <h6>{장소유형} {개소명} {이벤트 등급} {이벤트 종류} 발생정보<i class="rnm_closer"><img src="/images/default/close.svg"></i></h6>
         <ul class="tab">
             <li class="active"><a>기본 정보</a></li>
