--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -98,11 +98,11 @@
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox">
-                                <dt class="checkbox_title select_title">장소유형</dt>
-                                <dd class="checkbox_list list" style="display: none;">
-                                </dd>
-                            </dl>
+<!--                            <dl class="dropdown_checkbox">-->
+<!--                                <dt class="checkbox_title select_title">장소유형</dt>-->
+<!--                                <dd class="checkbox_list list" style="display: none;">-->
+<!--                                </dd>-->
+<!--                            </dl>-->
                             <dl class="dropdown_checkbox" data-selectbox-type="administZone">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
