--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
@@ -1,4 +1,8 @@
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout_config">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout/layout_config"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <th:block layout:fragment="content">
     <h4>
@@ -29,7 +33,7 @@
                     <dd><span class="count">123</span>건</dd>
                 </dl>
                 <ul>
-                    <li><i><img src="/images/default/add.svg"></i>디밍 그룹 생성</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')"><i><img src="/images/default/add.svg"></i>디밍 그룹 생성</li>
                 </ul>
             </div>
             <div class="search_table">
