--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -2,7 +2,8 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/layout_config">
+      layout:decorate="layout/layout_config"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <th:block layout:fragment="content">
     <h4>
@@ -33,7 +34,7 @@
                     <dd><span class="count">123</span>건</dd>
                 </dl>
                 <ul>
-                    <li id="addUserGroupBtn"><i><img src="/images/default/add.svg"></i>사용자 그룹 추가</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')" id="addUserGroupBtn"><i><img src="/images/default/add.svg"></i>사용자 그룹 추가</li>
                 </ul>
             </div>
             <div class="search_table" id="userGroupTable">
