--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout_inqry">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout/layout_inqry"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <th:block layout:fragment="content">
     <h4>
@@ -67,7 +71,7 @@
                         <li><span class="green"></span>정상 : 14</li>
                     </ul>
                     <ul>
-                        <li><i><img src="/images/default/add.svg"></i>추가</li>
+                        <li sec:authorize="hasAnyRole('ROLE_inqry_rw')"><i><img src="/images/default/add.svg"></i>추가</li>
                     </ul>
                 </div>
             </div>
