사용자 권한에 따른 버튼 표출 추가

--- a/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
@@ -143,8 +143,8 @@
                     </fieldset>
                 </div>
                 <ul class="bottom">
-                    <li data-mod="true" id="modProcBtn">정보 수정</li>
-                    <li class="color" data-add="true" id="addProcBtn">등록</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')" data-mod="true" id="modProcBtn">정보 수정</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')" class="color" data-add="true" id="addProcBtn">등록</li>
                 </ul>
             </div>
         </section>
