--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -134,9 +134,9 @@
                     </div>
                 </div>
                 <ul class="bottom">
-                    <li data-mode="mod" id="delUserAccountProcBtn">삭제</li>
-                    <li data-mode="mod" id="modUserAccountProcBtn">정보 수정</li>
-                    <li class="color" data-mode="add" id="addUserAccountProcBtn">등록</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')" data-mode="mod" id="delUserAccountProcBtn">삭제</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')" data-mode="mod" id="modUserAccountProcBtn">정보 수정</li>
+                    <li sec:authorize="hasAnyRole('ROLE_config_rw')" class="color" data-mode="add" id="addUserAccountProcBtn">등록</li>
                 </ul>
             </div>
         </section>
