UserStatus value 자료형 타입 정수로 통일

--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -76,7 +76,7 @@
                                 <dt>사용 여부</dt>
                                 <dd>
                                     <span>
-                                        <input type="radio" id="group_status_use" name="userGroupStatus" data-value="0" checked>
+                                        <input type="radio" id="group_status_use" name="userGroupStatus" data-value="0">
                                         <label for="group_status_use"><span class="round"></span>사용</label>
                                     </span>
                                     <span>
@@ -120,7 +120,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            <input type="radio" id="dashboardReadAndWrite" name="dashboard" data-value="rw" checked>
+                                            <input type="radio" id="dashboardReadAndWrite" name="dashboard" data-value="rw">
                                             <label for="dashboardReadAndWrite"><span class="round"></span></label>
                                         </span>
                                     </td>
@@ -141,7 +141,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            <input type="radio" id="monitoringReadAndWrite" name="mntr" data-value="rw" checked>
+                                            <input type="radio" id="monitoringReadAndWrite" name="mntr" data-value="rw">
                                             <label for="monitoringReadAndWrite"><span class="round"></span></label>
                                         </span>
                                     </td>
@@ -162,7 +162,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            <input type="radio" id="inquiryReadAndWrite" name="inqry" data-value="rw" checked>
+                                            <input type="radio" id="inquiryReadAndWrite" name="inqry" data-value="rw">
                                             <label for="inquiryReadAndWrite"><span class="round"></span></label>
                                         </span>
                                     </td>
@@ -183,7 +183,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            <input type="radio" id="statisticsReadAndWrite" name="stats" data-value="rw" checked>
+                                            <input type="radio" id="statisticsReadAndWrite" name="stats" data-value="rw">
                                             <label for="statisticsReadAndWrite"><span class="round"></span></label>
                                         </span>
                                     </td>
@@ -204,7 +204,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            <input type="radio" id="settingReadAndWrite" name="config" data-value="rw" checked>
+                                            <input type="radio" id="settingReadAndWrite" name="config" data-value="rw">
                                             <label for="settingReadAndWrite"><span class="round"></span></label>
                                         </span>
                                     </td>
