--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -38,6 +38,7 @@
 
     <!-- pages js-->
     <script type="text/javascript" src="/js/pages/notice.js"></script>
+    <script type="text/javascript" src="/js/pages/signage.js"></script>
     <script type="text/javascript" src="/js/pages/commonCode.js"></script>
     <script type="text/javascript" src="/js/pages/event.js"></script>
     <script type="text/javascript" src="/js/pages/account.js"></script>
