공통 검색조건 부분수정(event_kind)

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
@@ -16,7 +16,7 @@
             <form>
                 <div>
                     <p>이벤트 종류</p>
-                    <dl class="dropdown_checkbox">
+                    <dl class="dropdown_checkbox" data-selectbox-type="eventKind">
                         <dt class="checkbox_title select_title">이벤트 종류</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
