--- a/danusys-smartMetering/src/main/resources/templates/admin/adminGroupList.html
+++ b/danusys-smartMetering/src/main/resources/templates/admin/adminGroupList.html
@@ -81,10 +81,12 @@
                 </ul>
                 <form id="adminGroupForm" data-groupcontent="info">
                     <dl>
-                        <dt><label for="adminGroupName">사용자 그룹 이름</label><span>필수</span></dt>
+                        <dt><label for="userGroupName">사용자 그룹 이름</label><span>필수</span></dt>
                         <dd>
-                            <input type="hidden" id="adminGroupSeq" name="adminGroupSeq"/>
-                            <input type="text" id="adminGroupName" name="adminGroupName" data-required="true" placeholder="이름을 입력해주세요"/>
+                  <!--      <input type="hidden" id="adminGroupSeq" name="adminGroupSeq"/>  -->
+                            <input type="hidden" id="userGroupSeq" name="userGroupSeq"/> <!-- 테스트 추가  -->
+                            <!-- 기존 adminGroupName을 userGroupName으로 수정 -->
+                            <input type="text" id="userGroupName" name="userGroupName" data-required="true" placeholder="이름을 입력해주세요"/>
                         </dd>
                     </dl>
                     <dl>
