--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -325,19 +325,19 @@
                         <li>
                             <span>이벤트 등급</span>
                             <span data-value="eventGrade" class="checkbox">
-                                        <input type="checkbox" id="lv1" name="">
+                                        <input type="checkbox" id="lv1" name="" disabled>
                                         <label for="lv1"><span></span><p class="checked lv1">긴급</p></label>
-                                        <input type="checkbox" id="lv2" name="">
+                                        <input type="checkbox" id="lv2" name="" disabled>
                                         <label for="lv2"><span></span><p class="checked lv2">주의</p></label>
                                     </span>
                         </li>
                         <li>
                             <span>이벤트 종류</span>
-                            <input data-value="eventKindName" type="text" placeholder="이벤트 종류">
+                            <input data-value="eventKindName" type="text" placeholder="이벤트 종류" disabled>
                         </li>
                         <li>
                             <span>장소 유형</span>
-                            <input type="text" placeholder="장소 유형">
+                            <input type="text" placeholder="장소 유형" >
                         </li>
                         <li>
                             <span>구역명</span>
@@ -345,7 +345,7 @@
                         </li>
                         <li>
                             <span>개소 ID / 개소명</span>
-                            <input data-value="stationSeq" type="text" placeholder="개소 ID / 개소명">
+                            <input data-value="stationSeq" type="text" placeholder="개소 ID / 개소명" disabled>
                         </li>
                         <li>
                             <span>개소 주소</span>
@@ -353,7 +353,7 @@
                         </li>
                         <li>
                             <span>이벤트 발생시각</span>
-                            <input data-value="insertDt" type="text" placeholder="이벤트 발생시각">
+                            <input data-value="insertDt" type="text" placeholder="이벤트 발생시각" disabled>
                         </li>
                     </ul>
                 </div>
