--- a/danusys-commons-ui/src/main/resources/templates/view/commons/roadView.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/roadView.html
@@ -51,6 +51,7 @@
 </head>
 <body>
 <div class="map_wrap">
+    <div>동동이 이동 : 오른쪽 마우스 클릭 </div>
     <div id="mapWrapper" style="width:30%;height:900px;float:left">
         <div id="map" style="width:100%;height:100%"></div> <!-- 지도를 표시할 div 입니다 -->
     </div>
