관제 펄스 시도중 & 연결선 구현중

--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -56,6 +56,7 @@
         <script type="text/javascript" src="/js/map/creater/layerControlCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/measureToolCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/mapPopupCreater.js"></script>
+        <script type="text/javascript" src="/js/map/creater/mapConnectLineCreater.js"></script>
 
 
         <script type="text/javascript" src="/js/map/layer_icon.js"></script>
