--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -45,8 +45,8 @@
                         </dd>
                     </dl>
                     <p>행정구역</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="district">
-                        <dt class="checkbox_title select_title">시설물 방향</dt>
+                    <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                        <dt class="checkbox_title select_title">행정구역</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
