--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -45,7 +45,7 @@
                 </div>
                 <div>
                     <p>행정구역</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="district">
+                    <dl class="dropdown_checkbox" data-selectbox-type="administZone">
                         <dt class="checkbox_title select_title">행정구역</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
